crates/kul-core/tests/snapshots/export__example_09_multi_adoption_with_positions.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ravi",
        "name": "Ravi Mehta",
        "gender": "male",
        "born": {
          "value": "1958-01-14",
          "precision": "day",
          "circa": false
        },
        "span": [
          1528,
          1592
        ]
      },
      {
        "id": "priya",
        "name": "Priya Mehta",
        "gender": "female",
        "born": {
          "value": "1960-04-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          1593,
          1657
        ]
      },
      {
        "id": "anita",
        "name": "Anita Rao",
        "gender": "female",
        "born": {
          "value": "1952-06-08",
          "precision": "day",
          "circa": false
        },
        "span": [
          1755,
          1819
        ]
      },
      {
        "id": "bharat",
        "name": "Bharat Rao",
        "gender": "male",
        "born": {
          "value": "1950-12-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          1820,
          1884
        ]
      },
      {
        "id": "chen",
        "name": "Chen Liu",
        "gender": "male",
        "born": {
          "value": "1955-09-09",
          "precision": "day",
          "circa": false
        },
        "span": [
          1988,
          2048
        ]
      },
      {
        "id": "dara",
        "name": "Dara Liu",
        "gender": "female",
        "born": {
          "value": "1957-02-17",
          "precision": "day",
          "circa": false
        },
        "span": [
          2049,
          2109
        ]
      },
      {
        "id": "sam",
        "name": "Sam",
        "gender": "other",
        "born": {
          "value": "1982-05-19",
          "precision": "day",
          "circa": false
        },
        "span": [
          2218,
          2380
        ]
      },
      {
        "id": "bro",
        "name": "Bro Mehta",
        "gender": "male",
        "born": {
          "value": "1985-03-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          2437,
          2516
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_ravi_priya",
        "spouses": [
          "ravi",
          "priya"
        ],
        "start": {
          "value": "1980-11-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          1658,
          1708
        ]
      },
      {
        "id": "m_anita_bharat",
        "spouses": [
          "anita",
          "bharat"
        ],
        "start": {
          "value": "1975-03-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          1885,
          1939
        ]
      },
      {
        "id": "m_chen_dara",
        "spouses": [
          "chen",
          "dara"
        ],
        "start": {
          "value": "1980-07-04",
          "precision": "day",
          "circa": false
        },
        "span": [
          2110,
          2158
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_ravi_priya",
        "childId": "sam",
        "kind": "biological",
        "span": [
          2274,
          2292
        ]
      },
      {
        "marriageId": "m_anita_bharat",
        "childId": "sam",
        "kind": "adoptive",
        "start": {
          "value": "1985-04-01",
          "precision": "day",
          "circa": false
        },
        "span": [
          2295,
          2336
        ]
      },
      {
        "marriageId": "m_chen_dara",
        "childId": "sam",
        "kind": "adoptive",
        "start": {
          "value": "1992-08-15",
          "precision": "day",
          "circa": false
        },
        "span": [
          2339,
          2380
        ]
      },
      {
        "marriageId": "m_ravi_priya",
        "childId": "bro",
        "kind": "biological",
        "span": [
          2498,
          2516
        ]
      }
    ]
  }
}
