crates/kul-core/tests/snapshots/export__example_10_disconnected_lineages_and_orphan_with_positions.snap
---
source: crates/kul-core/tests/export.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "ramesh",
        "name": "Ramesh Iyer",
        "gender": "male",
        "born": {
          "value": "1925-01-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          898,
          963
        ]
      },
      {
        "id": "sita",
        "name": "Sita Iyer",
        "gender": "female",
        "born": {
          "value": "1928-04-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          964,
          1029
        ]
      },
      {
        "id": "arjun",
        "name": "Arjun Iyer",
        "gender": "male",
        "born": {
          "value": "1950-08-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          1084,
          1167
        ]
      },
      {
        "id": "zara",
        "name": "Zara Khan",
        "gender": "female",
        "born": {
          "value": "1965-11-04",
          "precision": "day",
          "circa": false
        },
        "span": [
          1226,
          1287
        ]
      },
      {
        "id": "hiro",
        "name": "Hiro Kato",
        "gender": "male",
        "born": {
          "value": "1932-03-09",
          "precision": "day",
          "circa": false
        },
        "span": [
          1328,
          1389
        ]
      },
      {
        "id": "yuki",
        "name": "Yuki Kato",
        "gender": "female",
        "born": {
          "value": "1934-09-21",
          "precision": "day",
          "circa": false
        },
        "span": [
          1390,
          1451
        ]
      },
      {
        "id": "mei",
        "name": "Mei Kato",
        "gender": "female",
        "born": {
          "value": "1958-12-11",
          "precision": "day",
          "circa": false
        },
        "span": [
          1502,
          1581
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_ramesh_sita",
        "spouses": [
          "ramesh",
          "sita"
        ],
        "start": {
          "value": "1948-06-15",
          "precision": "day",
          "circa": false
        },
        "span": [
          1030,
          1082
        ]
      },
      {
        "id": "m_hiro_yuki",
        "spouses": [
          "hiro",
          "yuki"
        ],
        "start": {
          "value": "1956-05-04",
          "precision": "day",
          "circa": false
        },
        "span": [
          1452,
          1500
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_ramesh_sita",
        "childId": "arjun",
        "kind": "biological",
        "span": [
          1148,
          1167
        ]
      },
      {
        "marriageId": "m_hiro_yuki",
        "childId": "mei",
        "kind": "biological",
        "span": [
          1564,
          1581
        ]
      }
    ]
  }
}
